Beintoo iOS Sdk v2.8.11 beta
Includes Marketplace.
Supported iOS Versions: from iOS 4.0 to latest (5.1).

--- a/SDKBeintoo_Beta/it.lproj/BeintooLocalizable.strings
+++ b/SDKBeintoo_Beta/it.lproj/BeintooLocalizable.strings
@@ -353,5 +353,5 @@
 "requestAccepted"		= "Richiesta accettata.";
 "requestRefused"		= "Richiesta rifiutata.";
 "pendingFriendRequest"	= "Richiesta di amicizia in attesa di essere accettata.";
-"noUserMessage"			= "Utente non trovato. Siete pregati di ffettuare nuovamente il login.";
+"noUserMessage"			= "Utente non trovato. Siete pregati di effettuare nuovamente il login.";
 
