Beintoo iOS Sdk v2.8.11 beta
Includes Marketplace.
Supported iOS Versions: from iOS 4.0 to latest (5.1).

--- a/SDKBeintoo_Beta/de.lproj/BeintooLocalizable.strings
+++ b/SDKBeintoo_Beta/de.lproj/BeintooLocalizable.strings
@@ -329,7 +329,8 @@
 "missiondownloadnow"    = "Herunterladen jetzt";
 
 // AlertMessages
-"submitScoreMsg"		= "You earned %@ point(s).";
+"submitScoreMsg"		= "You earned %@ points.";
+"submitScoreMsgSinglePoint"		= "You earned %@ point.";
 "unlockAchievMsg"		= "Achievement unlocked!"; 
 "playerLoginMsg"        = "Welcome back %@";
 "useralreadyregistered" = "An user with this email is already registered"; /*******TRANSLATE***/
