--- a/SDKBeintoo_Beta/zh-Hans.lproj/BeintooLocalizable.strings
+++ b/SDKBeintoo_Beta/zh-Hans.lproj/BeintooLocalizable.strings
@@ -26,6 +26,10 @@
 "last"                              = "姓： ";
 "nickname"                          = "昵称：";
 
+// Give Bedollars
+"giveBedollarMsg"      = "You just earned %i Bedollar! Use your Bedollars to redeem great offers on Beintoo";
+"giveBedollarsMsg"      = "You just earned %i Bedollars! Use your Bedollars to redeem great offers on Beintoo";
+
 // Home
 "profileDesc"                       = "您的状态、消息和好友";
 "leaderboardDesc"                   = "查看总分";
@@ -48,9 +52,9 @@
 
 //Marketplace 
 "bedollars"                     = "Bedollars";
-"MPmarketplaceTitle"            = "Marketplace";
+"MPmarketplaceTitle"            = "Redeem";
 "MPtextDescriptionLong"         = "Redeem your coupons or send them as gifts";
-"MPdescription"                 = "choose your offers";
+"MPdescription"                 = "Use your Bedollars to redeem offers";
 "MPcredits"                     = "Your credits:";
 "MPmainSegmentedIndexTitle0"    = "Featured";
 "MPmainSegmentedIndexTitle1"    = "National";
@@ -84,8 +88,8 @@
 "upToDate"                      = "Up-to-date.";
 "MPwriteNewComment"             = "Write a comment";
 "MPorderByPrice"                = "Order by price";
-"submitScoreMarketplaceMsg"     = "You've got now %.2f %@, don't loose them! Use them in the Marketplace!";
-"submitScoreMarketplacePlayer"  = "Go now to Marketplace!";
+"submitScoreMarketplaceMsg"     = "You've got now %.0f %@, don't lose them! Use them in the Marketplace!";
+"submitScoreMarketplacePlayer"  = "";
 
 //Try Beintoo
 "tryBeintooHeader"              = "Join the community and get great discounts around you as reward for your achievements in this app!";
