updated Russian localized contents, minor bug fixings

--- a/SDKBeintoo_Beta/de.lproj/BeintooLocalizable.strings
+++ b/SDKBeintoo_Beta/de.lproj/BeintooLocalizable.strings
@@ -26,6 +26,7 @@
 "last"					= "Letzte: ";
 "nickname"				= "Spitzname:";
 "lederboardNoResult"    = "Mach neue Freunde und schlag ihre Highscore!";
+"accountTitle"          = "Accounts";
 
 // Home
 "profileDesc"			= "";
