The Sdk now support Russian language, fixed offset of Reward and Give Bedollars when the status bar is not hidden, fixed a minor bug when the internet connection was not available

--- a/SDKBeintoo_Beta/de.lproj/BeintooLocalizable.strings
+++ b/SDKBeintoo_Beta/de.lproj/BeintooLocalizable.strings
@@ -26,7 +26,8 @@
 "last"					= "Letzte: ";
 "nickname"				= "Spitzname:";
 "lederboardNoResult"    = "Mach neue Freunde und schlag ihre Highscore!";
-"accountTitle"          = "Accounts";
+"accountsTitle"          = "Accounts";
+"You have no friends to invite" = "You have no friends to invite";
 
 // Home
 "profileDesc"			= "";
