--- a/SDKBeintoo_Beta/es.lproj/BeintooLocalizable.strings
+++ b/SDKBeintoo_Beta/es.lproj/BeintooLocalizable.strings
@@ -28,7 +28,8 @@
 "noResult"				= "Lo sentimos, no hay resultados!";
 "noRequest"				= "No tienes solicitudes de amistad pendientes en estos momentos.";
 "lederboardNoResult"    = "Haz nuevos amigos y desafiarlos en la tabla de clasificaciòn!";
-"accountTitle"          = "Accounts";
+"accountsTitle"          = "Accounts";
+"You have no friends to invite" = "You have no friends to invite";
 
 // Give Bedollars
 "giveBedollarMsg"      = "Acabas de ganar %i Bedollar! Úsa tus Bedollars para disfrutar de grandes ofertas en Beintoo";
